Alimentation du site vitrine
ajout des textes communiqués dans le fichiers word
modification des bannières

--- a/_data/navigation_fr.yml
+++ b/_data/navigation_fr.yml
@@ -10,5 +10,7 @@ main:
     url: /action3/
   - title: "Action 4"
     url: /action4/
+  - title: "Living Lab"
+    url: /livinglab/
   - title: "Observatoire des Parcours"
     url: /axe/    
