--- a/_config.yml
+++ b/_config.yml
@@ -258,6 +258,10 @@ collections:
     output: true
     permalink: /:collection/:year/:title/
 
+  portfolio:
+    output: true
+    permalink: /collection/:path/ 
+
   publications:
     output: true
     permalink: /:path    
@@ -372,6 +376,14 @@ defaults:
       lang: fr
 
 
+# _portfolio
+  - scope:
+    path: ""
+    type: portfolio
+  values:
+    layout: single
+    author_portfolio: false
+    share: true 
 
 
 
