--- a/_data/navigation_fr.yml
+++ b/_data/navigation_fr.yml
@@ -11,3 +11,5 @@ main:
     url: /livinglab/
   - title: "Observatoire des Parcours"
     url: /axe/    
+  - title: "Contact"
+    url: /contact/    
