--- a/_config.yml
+++ b/_config.yml
@@ -261,8 +261,9 @@ collections:
   publications:
     output: true
     permalink: /:path    
-  projects:
-    output: true    
+  actions:
+    output: true 
+    permalink: /:collection/:path/   
   people:
     output: true
     permalink: /:collection/:path/
@@ -340,22 +341,20 @@ defaults:
 
   # _projects
   - scope:
-      type: projects
+      type: actions
     values:
       layout: single
-      header:
-        overlay_filter: 0.4
-        show_overlay_excerpt: true 
+      classes: wide
       sidebar:
-        nav: ""      
+        nav: "actions"      
     #en
   - scope:
-      path: "_projects/fr"
+      path: "_actions/fr"
     values:
       lang: fr
       permalink: /:collection/:title/
       sidebar:
-        nav: "projects"        
+        nav: "actions"        
      
 
 # _people
