--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "AILES"
 title_separator          : "|"
 name                     : "Projet AILES"
 description              : "Projet AILES"
-url                      : #"https://european-perspectives-innovation-management.eu"
+url                      : "https://lf2l.github.io/ailes"
 baseurl                  : #"/ailes" # the subpath of your site, e.g. "/blog"
 repository               : "gaarbelaez/EPIM" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
