--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url                      : "https://lf2l.github.io"
 baseurl                  : "/ailes" #"/ailes" # the subpath of your site, e.g. "/blog"
 repository               : "gaarbelaez/EPIM" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-breadcrumbs              : true # true, false (default)
+breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : #"disqus"
