--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : ""
 title_separator          : " "
 name                     : "Projet AILES"
 description              : "Projet AILES"
-url                      : "https://lf2l.github.io"
-baseurl                  : "/ailes" #"/ailes" # the subpath of your site, e.g. "/blog"
+url                      : "https://lf2l.github.io/ailes"
+baseurl                  :  #"/ailes" # the subpath of your site, e.g. "/blog"
 repository               : "gaarbelaez/EPIM" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : false # true, false (default)
