--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title                    : ""
 title_separator          : " "
 name                     : "Projet AILES"
 description              : "Projet AILES"
-url                      : "https://lf2l.github.io"
+url                      : "https://www.projetailes.com"
 baseurl                  : "/ailes" # the subpath of your site, e.g. "/blog"
 repository               : "gaarbelaez/EPIM" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
