--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ title                    : ""
 title_separator          : " "
 name                     : "Projet AILES"
 description              : "Projet AILES"
-url                      : "https://www.projetailes.com"
-baseurl                  : "/ailes" # the subpath of your site, e.g. "/blog"
-repository               : "gaarbelaez/EPIM" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : "www.projetailes.com"
+baseurl                  : # the subpath of your site, e.g. "/blog"
+repository               : "lf2l/ailes" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
